# path-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: config.h
lib/material/: Material.cpp  Material.h
lib/math/: Aabb.cpp  Aabb.h  Box.cpp  Box.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Ray.cpp  Ray.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  aabb_util.cpp  aabb_util.h  math_util.cpp  math_util.h
lib/path_tracing/: LightTransformation.cpp  LightTransformation.h  RayStack.cpp  RayStack.h
lib/render/: LightSpectrum.cpp  LightSpectrum.h  RenderBuffer.cpp  RenderBuffer.h  color_util.cpp  color_util.h  render.cpp  render.h
lib/scene/: BoxObject.cpp  BoxObject.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SphereObject.cpp  SphereObject.h  aabbbvh_impl.cpp
lib/scene/scene_objects/: BoxObject.cpp  BoxObject.h  MeshObject.cpp  MeshObject.h  SceneObject.cpp  SceneObject.h  SphereObject.cpp  SphereObject.h  mesh_util.h
lib/util/: AabbBvh.cpp  AabbBvh.h  AabbBvh.tpp  Axis.h  aabb_util.h  bvh_util.h  debug_util.cpp  debug_util.h  mesh_util.h  string_util.h  time_util.h
src/: main.cpp  scenes.cpp  scenes.h
